plugins {
    id 'java-library'
}
apply plugin: 'com.diffplug.spotless'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations.all {
    resolutionStrategy {
        force 'com.google.guava:guava:33.5.0-jre'
    }
}  

dependencies {
    api files('libs/manifest-merger.jar')
    api files('libs/aaptcompiler-7.4.0-alpha09.jar')
    api files('libs/converted-common-30.40.0-alpha09.jar')
    api files('libs/converted-data-binding.jar')

    implementation 'com.android.tools:annotations:30.4.0-alpha09'
    api("com.android.tools:sdk-common:30.4.0-alpha09") {
        transitive = false
    }
    api("com.android.tools.layoutlib:layoutlib-api:30.4.0-alpha09") {
        exclude group: 'com.android.tools', module: 'common'
    }
    implementation 'javax.inject:javax.inject:1'
    implementation project(':javac') 
    implementation project(path: ':common')
    implementation project(path: ':jaxp:jaxp-internal')
    implementation project(path: ':jaxp:xml')
    implementation files('libs\\compilerCommon.antlr.shaded_jar.jar')
    implementation files('libs\\compilerCommon.antlr_runtime.shaded_jar.jar')
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}